--- a/权限设计.md
+++ b/权限设计.md
@@ -128,6 +128,51 @@
 	- 管理员：需要 `admin.manage` + `device.read.*`（或 `device.readAll`）。
 	- 普通用户：仅返回 `owner_user_id=自己` 的设备树。
 
+约束与请求字段（实现约定）
+- 创建设备（POST /devices）：
+	- 请求字段：`HardwareID`、`Name`、`Role`、`ParentID`、`OwnerUserID?`。
+	- 管理员（含 `admin.manage`）可自由创建；可为任意用户设为 `OwnerUserID`。
+	- 非管理员：
+		- 必须提供 `ParentID`，且对该父设备具备控制权（设备默认自控/祖先，或作为所有者）。
+		- 不得将 `OwnerUserID` 设为他人；若未提供该字段，服务端会默认将 `OwnerUserID` 设为当前用户。
+		- 不允许“无父”的自由挂载（避免越权扩展设备树）。
+	- 失败返回：`permission denied`、`parent required`、`parent not found` 等。
+
+- 更新设备（PUT /devices/{id}）：
+	- 非管理员必须首先“能控制目标设备”（三来源任一：管理员节点/设备默认/所有权）。
+	- 非管理员限制：
+		- 不得将 `OwnerUserID` 改为他人；
+		- 如修改 `ParentID`，必须对“新父设备”具备控制权（与创建时相同）；
+		- 其他字段（如 `Name`、`Role`）可在上述前提下更新（可按需进一步限制 `Role` 只有管理员能改）。
+
+- 删除设备（DELETE /devices/{id}）：
+	- 允许管理员删除；
+	- 允许设备所有者删除“自己的设备”；
+	- 单纯的“祖先设备”关系不足以删除他人拥有的设备（安全起见已收紧）。
+
+示例请求（管理 API 经过 Manager 代理；字段名保持与数据模型一致）：
+```json
+// 创建设备（非管理员，必须提供 ParentID；Owner 省略则默认为自己）
+{
+	"HardwareID": "node-001",
+	"Name": "Sensor A",
+	"Role": "node",
+	"ParentID": 12
+}
+
+// 更新设备（修改父节点，需能控制新父）
+{
+	"ID": 34,
+	"ParentID": 12,
+	"Name": "Renamed"
+}
+
+// 删除设备（所有者或管理员）
+{
+	"id": 34
+}
+```
+
 ### 8.3 变量池
 - GET /variables?deviceId=...（var.read.{id}.* 或隐式允许）
 - POST /variables（var.add.{id}.[name] 或隐式允许）
